jena-owl2: add `OntModel#createRDFProperty`; make `OntClass#declaredProperties` & `hasDeclaredProperty` accept generic `OntProperty`; refactoring of `OntPersonality` (remove `Vocabulary.Entities`, etc); more `OntClassDeclaredPropertiesTest`s