@@ -13,7 +13,6 @@ import org.apache.jena.rdf.model.Property;
 import org.apache.jena.rdf.model.Resource;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -38,11 +37,7 @@ abstract class VocabularyImpl<T extends Resource> implements Vocabulary<T> {
 
     @Override
     public Set<Node> get(Class<? extends T> key) throws OntJenaException {
-        Set<Node> res = map.get(OntJenaException.notNull(key, "Null key"));
-        if (res == null) {
-            return Collections.emptySet();
-        }
-        return res;
+        return map.getOrDefault(OntJenaException.notNull(key, "Null key"), Set.of());
     }
 
     @Override
@@ -50,21 +45,21 @@ abstract class VocabularyImpl<T extends Resource> implements Vocabulary<T> {
         return map.containsKey(type);
     }
 
-    static class EntitiesImpl extends VocabularyImpl<OntObject> implements OntPersonality.Builtins, OntPersonality.Punnings {
+    static class BuiltinsImpl extends VocabularyImpl<OntObject> implements OntPersonality.Builtins, OntPersonality.Punnings {
         private Set<Node> classes;
         private Set<Node> datatypes;
         private Set<Node> objectProperties;
         private Set<Node> datatypeProperties;
         private Set<Node> annotationProperties;
-        private Set<Node> allProperties;
+        private Set<Node> ontProperties;
         private Set<Node> individuals;
 
-        EntitiesImpl(Map<Class<? extends OntObject>, Set<Node>> map) {
+        BuiltinsImpl(Map<Class<? extends OntObject>, Set<Node>> map) {
             super(map);
         }
 
         @Override
-        public Set<Node> getClasses() {
+        public Set<Node> getNamedClasses() {
             return classes == null ? classes = get(OntClass.Named.class) : classes;
         }
 
@@ -89,14 +84,14 @@ abstract class VocabularyImpl<T extends Resource> implements Vocabulary<T> {
         }
 
         @Override
-        public Set<Node> getIndividuals() {
+        public Set<Node> getNamedIndividuals() {
             return individuals == null ? individuals = get(OntIndividual.Named.class) : individuals;
         }
 
         @Override
-        public Set<Node> getProperties() {
-            if (allProperties != null) return allProperties;
-            return allProperties = Stream.of(getObjectProperties(), getAnnotationProperties(), getDatatypeProperties())
+        public Set<Node> getOntProperties() {
+            if (ontProperties != null) return ontProperties;
+            return ontProperties = Stream.of(getObjectProperties(), getAnnotationProperties(), getDatatypeProperties())
                     .flatMap(Collection::stream)
                     .collect(Collectors.toUnmodifiableSet());
         }
